# polynomial-tools

./: Cargo.toml  README.md
src/: cubic.rs  lib.rs  linear.rs  quadratic.rs  quartic.rs
