[package]
name = "polynomial_tools"
version = "0.1.0"
edition = "2021"
description = "A crate that contains some utilities for operations on polynomials."
license = "MIT"
exclude = ["replit.nix"]
repository = "https://github.com/cod10129/polynomial-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
